--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Konsultasi Bisnis Chatbot</title>
+    <title>KonsulBot</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -16,42 +16,254 @@
       referrerpolicy="no-referrer"
     />
   </head>
-
   <body>
-    <!-- Header -->
-    <nav class="navbar justify-content-center">
-      <h4><i class="fa-solid fa-robot"></i> Konsultasi Bisnis Chatbot <i class="fa-solid fa-robot"></i></h4>
-    </nav>
-    <!-- Header End  -->
+    <!--Header-->
+    <!-- site-navbar start -->
+    <div class="navbar-area">
+      <div class="container">
+        <nav class="site-navbar">
+          <!-- site logo -->
+          <a href="#home" class="site-logo">konsulbot</a>
 
-    <!-- Chatbot Body -->
-    <div class="chatbot-body">
-      <div class="msger">
-        <header class="msger-header">
-          <div class="msger-header-title"><i class="fa-solid fa-laptop-code"></i> KonsulBot <i class="fa-solid fa-laptop-code"></i></div>
-        </header>
+          <!-- site menu/nav -->
+          <ul>
+            <li><a href="#hero">home</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#chatbot">chatbot</a></li>
+            <li><a href="#footer">contact</a></li>
+          </ul>
 
-        <main class="msger-chat">
-          <div class="msg left-msg">
-            <div class="msg-img"></div>
-            <div class="msg-bubble">
-              <div class="msg-info">
-                <div class="msg-info-name">KonsulBot</div>
-                <div class="now">Sekarang</div>
-              </div>
-
-              <div class="msg-text">Halo kak. Selamat Datang di KonsulBot. Ada yang bisa saya bantu?</div>
-            </div>
-          </div>
-        </main>
-
-        <form class="msger-inputarea">
-          <input type="text" class="msger-input" id="textInput" placeholder="Masukkan pesanmu disini..." />
-          <button type="submit" class="msger-send-btn">Kirim</button>
-        </form>
+          <!-- nav-toggler for mobile version only -->
+          <button class="nav-toggler">
+            <span></span>
+          </button>
+        </nav>
       </div>
     </div>
+    <!-- navbar-area end -->
+    <!-- Header End  -->
+
+    <!--Hero Section-->
+    <section class="hero" id="hero">
+      <div class="background-image"></div>
+      <div class="hero-content-area">
+        <h1>Welcome to KonsulBot!</h1>
+        <h3>Punya masalah dengan bisnis anda? Disinilah solusinya</h3>
+        <a href="#chatbot" class="btn">Start Chat</a>
+      </div>
+    </section>
+    <!--Hero End-->
+  <!--Section about-->
+<!-- About -->
+<br>
+<br>
+<br>
+<br>
+<section id="about" >
+
+  <div class="container">
+
+    <div class="row text-center mb-4">
+
+      <div class="col">
+
+        <h2>About Us</h2>
+
+      </div>
+
+    </div>
+
+    <div class="row justify-content-center text-center">
+
+      <div class="col-14">
+
+        <p>Kami adalah salah satu penyedia jasa konsultasi bisnis menggunakan chatbot. Bagi anda yang masih memiliki pengetahuan minim dalam menjalankan bisnis, pilihan anda sangat tepat mengunjungi website ini. Di sini anda bisa berkonsultasi mengenai bisnis anda. Anda bisa berkonsultasi mengenai permasalahan marketing, sumber daya manusia, dan keuangan bisnis anda. Pengetahuan bisnis yang masih rendah adalah salah satu penyebab bisnis UMKM banyak yang gagal dan gulung tikar. Jangan sampai hal ini terjadi pada bisnis anda.Let's start your journey with your Business!</p>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 100000 100000 320"><path fill="#bdc0e3" fill-opacity="1" d="M0,128L48,149.3C96,171,192,213,288,213.3C384,213,480,171,576,144C672,117,768,107,864,101.3C960,96,1056,96,1152,106.7C1248,117,1344,139,1392,149.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+
+</section>
+
+<!-- Akhir About -->
+
+      <!--card -->
+      <div class="container mt-5">
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-3">
+            <div class="our-team">
+              <div class="pic">
+                <img src="{{url_for('static', filename='images/nad.jpg')}}" alt="" />
+              </div>
+              <div class="team-content">
+                <h3 class="title"><a href="https://www.instagram.com/nadiyahsaa_/?hl=id">Nadiyah Saidah</a></h3>
+                <span class="post">Front End Developer</span>
+              </div>
+              <ul class="univ">
+                <h4 class="title">Universitas Alma Ata</h4>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="our-team">
+              <div class="pic">
+                <img src="{{url_for('static', filename='images/rifki.png')}}" alt="" />
+              </div>
+              <div class="team-content">
+                <h3 class="title"><a href="https://www.instagram.com/20mrk/?hl=id">Muhammad Rifki Kurniawan</a></h3>
+                <span class="post">AI Engineer</span>
+              </div>
+              <ul class="univ">
+                <h4 class="title">UPN "Veteran" Yogyakarta</h4>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="our-team">
+              <div class="pic">
+                <img src="{{url_for('static', filename='images/mut.png')}}" alt="" />
+              </div>
+              <div class="team-content">
+                <h3 class="title"><a href="https://www.instagram.com/mutiiaangraini/?hl=id">Mutia Anggraini</a></h3>
+                <span class="post">AI Engineer</span>
+              </div>
+              <ul class="univ">
+                <h4 class="title">UPN "Veteran" Yogyakarta</h4>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="our-team">
+              <div class="pic">
+                <img src="{{url_for('static', filename='images/wenti.png')}}" alt="" />
+              </div>
+              <div class="team-content">
+                <h3 class="title"><a href="https://instagram.com/wentyy.hlim?igshid=NTdlMDg3MTY=">Wiyenti Halim</a></h3>
+                <span class="post">UI/UX</span>
+              </div>
+              <ul class="univ">
+                <h4 class="title">Universitas Alma Ata</h4>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="our-team">
+              <div class="pic">
+                <img src="{{url_for('static', filename='images/al.png')}}" alt="" />
+              </div>
+              <div class="team-content">
+                <h3 class="title"><a href="https://www.instagram.com/allialll__/?hl=id">Nik Nor Allia</a></h3>
+                <span class="post">uI/UX</span>
+              </div>
+              <ul class="univ">
+                <h4 class="title">Universitas Alma Ata</h4>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Chatbot Body -->
+    <section id="chatbot">
+      <h4>Konsultasi Bisnis Chatbot</h4>
+      <div class="chatbot-body">
+        <div class="msger">
+          <header class="msger-header">
+            <div class="msger-header-title"><i class="fas fa-robot"></i> Konsultasi Bisnis <i class="fas fa-robot"></i></div>
+          </header>
+
+          <main class="msger-chat">
+            <div class="msg left-msg">
+              <div class="msg-img"></div>
+              <div class="msg-bubble">
+                <div class="msg-info">
+                  <div class="msg-info-name">KonsulBot</div>
+                  <div class="now">Sekarang</div>
+                </div>
+
+                <div class="msg-text">👋 Selamat Datang di KonsulBot. Ada yang bisa saya bantu?</div>
+              </div>
+            </div>
+          </main>
+
+          <form class="msger-inputarea">
+            <input type="text" class="msger-input" id="textInput" placeholder="Masukkan pesanmu disini..." />
+            <button type="submit" class="msger-send-btn">Kirim</button>
+          </form>
+        </div>
+      </div>
+    </section>
     <!-- Chatbot Body End  -->
+
+    <!-- footer section start -->
+    <footer id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#hero"><img src="/static/images/Group 26.png" alt="" class="img-fluid logo-footer" /></a>
+            <div class="footer-about"></div>
+          </div>
+          <div class="col-md-3">
+            <div class="useful-link">
+              <h2>Useful Links</h2>
+              <img src="./assets/images/about/home_line.png" alt="" class="img-fluid" />
+              <div class="use-links">
+                <li>
+                  <a href="#hero"><i class="fa-solid fa-angles-right"></i> Home</a>
+                </li>
+                <li>
+                  <a href="#about"><i class="fa-solid fa-angles-right"></i> About Us</a>
+                </li>
+                <li>
+                  <a href="#chatbot"><i class="fa-solid fa-angles-right"></i> Chatbot</a>
+                </li>
+                <li>
+                  <a href="#footer"><i class="fa-solid fa-angles-right"></i> Contact</a>
+                </li>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="social-links">
+              <h2>Contact</h2>
+              <img src="./assets/images/about/home_line.png" alt="" />
+              <div class="social-icons">
+                <li>
+                  <a href="https://www.facebook.com/profile.php?id=100050011365688"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/20mrk/?hl=id"><i class="fa-brands fa-instagram"></i> Instagram</a>
+                </li>
+                <li>
+                  <a href="https://www.linkedin.com/in/muhammad-rifki-kurniawan-5265a4202/"><i class="fa-brands fa-linkedin-in"></i> Linkedin</a>
+                </li>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="address">
+              <h2>Address</h2>
+              <img src="./assets/images/about/home_line.png" alt="" class="img-fluid" />
+              <div class="address-links">
+                <li class="address1"><i class="fa-solid fa-location-dot"></i>Bantul, Yogyakarta</li>
+                <li>
+                  <a href=""><i class="fa-solid fa-phone"></i> +62 8529 1378 856</a>
+                </li>
+                <li>
+                  <a href=""><i class="fa-solid fa-envelope"></i> konsulbot@gmail.com</a>
+                </li>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer section end -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -63,7 +275,7 @@
       const msgerChat = get('.msger-chat');
 
       // Icons made by Freepik from www.flaticon.com
-      const BOT_IMG = '/static/images/kadekbot.png';
+      const BOT_IMG = '/static/images/a.png';
       const PERSON_IMG = '/static/images/user.png';
       const BOT_NAME = 'KonsulBot';
       const PERSON_NAME = 'Kamu';
